# globus-automate-client

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.adoc  Makefile  README.md  README.rst  WORKFLOW.md  globus-automate.ipynb  globus_automate_client.py  package.json  pyproject.toml  setup.cfg  tox.ini
.github/: CODEOWNERS
.github/workflows/: build.yaml  has_changelog.yaml  quality.yaml
action_bodies/: identifier.json  transfer.json
changelog.d/: 20211029_162341_kurtmckee_bugs.rst  20211029_162341_kurtmckee_sdk_upgrade.rst  20211029_162341_kurtmckee_sdk_v3.rst  20211101_121713_jimPruyne_collection_mkdir_aps_expression_functions.rst  20211110_152131_uriel_fix_changelog.rst  20211112_133005_kurtmckee_doc_http_action_provider.rst  20211116_163321_uriel_allow_empty_flow_updates.rst  20211118_180000_kurtmckee_test_and_lint.rst  20211123_092348_kurtmckee_merge_parameter_aliases_better.rst  20211202_152823_kurtmckee_fix_key_error_sc_12117.rst  20211209_145022_kurtmckee_fix_flow_display_crash_sc_12186.rst  20211214_142801_kurtmckee_doc_notify_opts_sc_11450.rst  20211221_182204_jimPruyne_caching_and_polling.rst  20220107_173705_uriel_add_example_flow_input_schema.rst  20220110_180812_uriel_pydantic_flow_def_validation.rst  20220124_101949_jake_sc_12219.rst  20220210_104458_jake_fix_docs_typo.rst  20220211_164656_kurtmckee_output_login_prompts_stderr.rst  20220224_133151_jake_globus_collection.rst  20220307_084347_kurtmckee_fix_tabular_run_list_output.rst  20220310_131513_jimPruyne_timer_cli_named_in_error_string.rst  20220315_143000_kurtmckee_batch_run_updates_sc_12888.rst  20220405_164819_kurtmckee_flow_loop_examples_sc_13642.rst  20220408_093928_kurtmckee_dependency_updates.rst  20220414_140834_kurtmckee_allow_https_localhost_sc_14485.rst  20220429_170559_kurtmckee_update_rich.rst  20220602_220800_LeiGlobus_flow_run_dry_run_path_sc_16137.rst  20220613_121945_kurtmckee_update_pyjwt.rst  20220613_175005_kurtmckee_standardize_options_sc_13892.rst  20220713_181439_kurtmckee_doc_auto_flow_starts_sc_16711.rst  20220830_105958_nick_fix_web_option_with_parameters.rst  20221113_160825_ada_docs_edits.rst  20221115_141348_ada_example_updates.rst  20221215_172045_sirosen_update_ci_and_build_configs.rst  20221215_172737_sirosen_update_ci_and_build_configs.rst  20230207_143615_kurtmckee.rst  20230314_155142_kurtmckee_prevent_passive_permission_changes_on_flow_update_sc_19291.rst  20230718_145430_ada_update_pyyaml.rst  20230815_205352_kurtmckee_update_dependencies.rst  20241204_103536_kurtmckee_updates.rst  (+1 more)
docs/: actions-api-spec.html  actions-api-spec.yaml  flow_creation_guide.md  flows-api-spec.html  flows-api-spec.yaml  requirements.txt
docs/source/: authoring_flows.rst  automating-flow-runs.rst  cli_docs.rst  cli_reference.rst  concepts.rst  conf.py  example_flows.rst  globus_action_providers.rst  index.rst  license.rst  migration.rst  overview.rst  python_sdk.rst  python_sdk_reference.rst  quick_start.rst  using_cli_and_flows.rst  using_the_cli.rst
examples/action_bodies/: datacite.json  delete_permission.json  email.json  expression_action.json  hello_world.json  mkdir.json  (+11 more)
flows/: hello_world_flow.json  hello_world_input.json  hello_world_with_sleep_input.json  identifier_flow.json  identifier_flow_input.json  multi_transfer_flow.json  multi_transfer_flow_input.json  multi_transfer_flow_with_identifier.json  multi_transfer_flow_with_identifier_input.json  single_transfer_flow.json  single_transfer_input.json
globus_automate_client/: __init__.py  action_client.py  client_helpers.py  flow_model.py  flows_client.py  flows_schema.json  graphviz_rendering.py  helpers.py  main.py  models.py  queues_client.py  sync_and_identifier.json  token_management.py
tests/: conftest.py  test_action_client.py  test_flows_client.py  test_helpers.py  test_init.py  test_models.py  test_sdk_v3.py
(+105 files in other folders)
