[tool.poetry]
name = "globus-automate-client"
version = "0.17.1"
description = "Client for the Globus Flows service"
authors = [
    "Jake Lewis <jake@globus.org>",
    "Kurt McKee <kurt@globus.org>",
    "Lei Wang <lei@globus.org>",
]
keywords = [
    "globus",
    "flows",
    "automation",
    "workflow",
    "action_provider",
    "command line",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

readme = "README.rst"
license = "Apache-2.0"

[tool.poetry.scripts]
globus-automate = "globus_automate_client.cli.main:app"

[tool.poetry.dependencies]
python = "^3.8"
globus-sdk = "^3.1"
graphviz = "^0.12"
typer = {extras = ["all"], version = "^0.4.1"}
jsonschema = "^3.2.0"
PyYAML = "^6.0.1"
rich = "^12.3.0"
arrow = "^1.1.1"
typing-extensions = "^4.1.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
rstcheck = "^3.3.1"
typer-cli = "^0.0.13"
pypandoc = "^1.5"
responses = "^0.14.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
profile = "black"
src_paths = ["globus_automate_client", "examples", "docs", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.6"
ignore_missing_imports = true

[tool.scriv]
categories = ["Features", "Bugfixes", "Documentation"]
version = "literal: pyproject.toml: tool.poetry.version"

[tool.coverage.run]
branch = true
