[tool.poetry]
name = "globus-automate-client"
version = "0.18.0"
description = "Client for the Globus Flows service"
authors = [
    "Jake Lewis <jake@globus.org>",
    "Kurt McKee <kurt@globus.org>",
    "Lei Wang <lei@globus.org>",
]
keywords = [
    "globus",
    "flows",
    "automation",
    "workflow",
    "action_provider",
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

readme = "README.rst"
license = "Apache-2.0"

[tool.poetry.scripts]
globus-automate = "globus_automate_client.cli.main:app"

[tool.poetry.dependencies]
python = ">=3.9"
globus-sdk = "^3.1"
graphviz = "^0.12"
typer = {extras = ["all"], version = "^0.4"}
jsonschema = "^3.2"
PyYAML = "^6.0"
rich = "^13.9"
arrow = "^1.1"
typing-extensions = "^4.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
rstcheck = "^3.3"
typer-cli = "^0.0"
pypandoc = "^1.5"
responses = "^0.14"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
profile = "black"
src_paths = ["globus_automate_client", "examples", "docs", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.scriv]
categories = ["Features", "Bugfixes", "Documentation"]
version = "literal: pyproject.toml: tool.poetry.version"

[tool.coverage.run]
branch = true
