[tool.poetry]
name = "globus-automate-client"
version = "0.19.0"
description = "This software is end-of-life."
authors = [
    "Globus <support@globus.org>",
]
classifiers = [
    "Development Status :: 7 - Inactive",
]

readme = "README.md"
license = "Apache-2.0"

[tool.poetry.scripts]
globus-automate = "globus_automate_client:main"

[tool.poetry.dependencies]
python = ">=3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
